src/objects/Acct_Calendar__c.object
<CustomObject>
    <description>[Object to support Zuora royalty solution]
Accounting calendar object, for royalty purposes;  maintained by Accounting team</description>
    <fields>
        <fullName>ClosedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClosedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateClosed__c</fullName>
        <label>DateClosed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PeriodName__c</fullName>
        <label>PeriodName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PeriodNumber__c</fullName>
        <label>PeriodNumber</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PeriodYear__c</fullName>
        <label>PeriodYear</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuarterEndDate__c</fullName>
        <label>QuarterEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuarterName__c</fullName>
        <label>QuarterName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuarterStartDate__c</fullName>
        <label>QuarterStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YearStartDate__c</fullName>
        <label>YearStartDate</label>
        <type>Date</type>
    </fields>
    <label>Acct Calendar</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PeriodName__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>QuarterStartDate__c</columns>
        <columns>QuarterEndDate__c</columns>
        <columns>PeriodNumber__c</columns>
        <columns>QuarterName__c</columns>
        <columns>PeriodYear__c</columns>
        <columns>DateClosed__c</columns>
        <columns>ClosedFlag__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Acct Calendar Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acct Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>